ukui-notebook (3.2.0-0k7) v101; urgency=medium

  * BUG #109823 【用户手册】用户手册首页打印机、便签贴的图标icon需替换为寻光主题图标
  * 需求号: 无
  * 其他改动说明：无
  * 其他改动影响域：无
  
 -- jiangdingyuan <jiangdingyuan@kylinos.cn>  Fri, 29 Jul 2022 09:29:06 +0800

ukui-notebook (3.2.0-0k6) v101; urgency=medium

  * BUG #126790 【云桌面】【便签本】只插入图片然后删除图片，便签本还是显示picture，内容没有清空
  * BUG #126786 【云桌面】【便签贴】只插入图片时，便签本显示的是picture
  * 需求号: 无
  * 其他改动说明：无
  * 其他改动影响域：无
  
 -- jiangdingyuan <jiangdingyuan@kylinos.cn>  Mon, 25 Jul 2022 16:43:17 +0800

ukui-notebook (3.2.0-0k5) v101; urgency=medium

  * BUG #130758 【便签】【设计】【统一性走查】关于界面样式调用最新的sdk
  * BUG #129319 【字体】【便签本】【设计】系统设置字号为13.5号（18px）时，便签列表显示不正常
  * 需求号: 无
  * 其他改动说明：无
  * 其他改动影响域：无
  
 -- jiangdingyuan <jiangdingyuan@kylinos.cn>  Fri, 22 Jul 2022 13:04:09 +0800

ukui-notebook (3.2.0-0k4) v101; urgency=medium

  * BUG:无
  * 需求号: 无
  * 其他改动说明：无
  * 其他改动影响域：无
  * 其他：debuild

 -- jiangdingyuan <jiangdingyuan@kylinos.cn>  Tue, 12 Jul 2022 15:28:33 +0800

ukui-notebook (3.2.0-0k3) v101; urgency=medium

  * BUG #127608 【便签本】便签本模块未适配藏语
  * BUG #118896 【藏文】【便签本】藏文系统下便签本显示为英文界面
  * 需求号: 无
  * 其他改动说明：无
  * 其他改动影响域：无

 -- jiangdingyuan <jiangdingyuan@kylinos.cn>  Tue, 12 Jul 2022 15:28:33 +0800

ukui-notebook (3.2.0-0k2) v101; urgency=medium

  * BUG #126047 【大数据平台】【便签贴】便签贴未按需求实现埋点
  * BUG #125344 【大数据平台】【便签贴】【用例364764】删除便签贴没有打印上传数据日志，也没有上传数据到数据平台服务器上
  * BUG #125337 【大数据平台】【便签贴】【用例364762】新建便签贴没有打印上传数据日志，也没有上传数据到数据平台服务器上
  * BUG #123638 【UKUI 3.1.4 走查】【设计】【便签本】切换字号与字体颜色不居中
  * 需求号: 无
  * 其他改动说明：无
  * 其他改动影响域：无

 -- jiangdingyuan <jiangdingyuan@kylinos.cn>  Tue, 12 Jul 2022 15:28:33 +0800

ukui-notebook (3.2.0-0k1) v101; urgency=medium

  * Bug:  
        # 123638 【UKUI 3.1.4 走查】【设计】【便签本】切换字号与字体颜色不居中
        # 123640 【UKUI 3.1.4 走查】【设计】【便签本】窗口三态有问题
        # 123959 【UKUI 3.1.4 走查】【设计】【便签】便签列表两种视图不一致
        # 118896 【藏文】【便签本】藏文系统下便签本显示为英文界面
  * 需求号: 无
  * 其他改动说明：无
  * 其他改动影响域：无

 -- jiangdingyuan <jiangdingyuan@kylinos.cn>  Thu, 16 Jun 2022 16:49:14 +0800
