@@ -1,3 +1,13 @@
+ukui-notebook (3.2.0-0k8) v101; urgency=medium
+
+  * BUG #126790 【云桌面】【便签本】只插入图片然后删除图片，便签本还是显示picture，内容没有清空
+  * BUG #126786 【云桌面】【便签贴】只插入图片时，便签本显示的是picture
+  * 需求号: 无
+  * 其他改动说明：无
+  * 其他改动影响域：无
+  
+ -- jiangdingyuan <jiangdingyuan@kylinos.cn>  Mon, 08 Aug 2022 15:16:13 +0800
+
 ukui-notebook (3.2.0-0k7) v101; urgency=medium
 
   * BUG #109823 【用户手册】用户手册首页打印机、便签贴的图标icon需替换为寻光主题图标
